--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         <img src=".//img/desligada.jpg" alt="lampada" id="lamp" />
       </div>
       <div>
-        <button id="turnOn">Ligar</button>
-        <button id="turnOff">Desligar</button>
+        <button id="turnOnOff">Ligar</button>
       </div>
     </main>
-    
+
     <script src="./lampada.js"></script>
   </body>
 </html>
